<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_without_background"/>
    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">
        <TextView
            android:id="@+id/tvUpdateName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/secondary_color"
            android:text="@string/update_name_text"/>

        <LinearLayout
            android:id="@+id/ll_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_below="@+id/tvUpdateName">

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:backgroundTint="@color/primary_color"
                android:textColorHint="@color/secondary_color"
                android:hint="@string/get_first_name"
                android:singleLine="true"
                android:layout_marginEnd="7dp"
                android:imeOptions="actionNext"
                android:textSize="18sp"
                android:textColor="@color/secondary_color" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textSize="18sp"
                android:singleLine="true"
                android:layout_marginStart="7dp"
                android:hint="@string/get_last_name"
                android:imeOptions="actionDone"
                android:backgroundTint="@color/primary_color"
                android:textColorHint="@color/secondary_color"
                android:textColor="@color/secondary_color" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvTextViewDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_name_desc_text"
            android:layout_below="@+id/ll_name"/>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/update_button"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/secondary_color"
            android:background="@drawable/button_primary_filled"/>
    </RelativeLayout>

</RelativeLayout>