<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_without_background"/>

    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <TextView
            android:id="@+id/tvUpdatePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/secondary_color"
            android:text="@string/update_password_text"/>


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:textColorHint="@color/secondary_color"
            android:hint="@string/edit_profile_password"
            android:singleLine="true"
            android:layout_marginEnd="7dp"
            android:imeOptions="actionNext"
            android:textSize="18sp"
            android:textColor="@color/secondary_color"
            android:layout_below="@+id/tvUpdatePassword"
            />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_color"
            android:textColorHint="@color/secondary_color"
            android:hint="@string/edit_confirm_profile_password"
            android:singleLine="true"
            android:layout_marginEnd="7dp"
            android:imeOptions="actionNext"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/secondary_color"
            android:layout_below="@+id/etPassword"
            />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/update_button"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/secondary_color"
            android:background="@drawable/button_primary_filled"/>

    </RelativeLayout>
</RelativeLayout>