<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_without_background" />

    <TextView
        android:id="@+id/tvNameDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_color"
        android:textSize="22sp"
        android:text="@string/get_name_des_text"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@+id/tvNameDes">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="@color/primary_color"
            android:textColorHint="@color/secondary_color"
            android:hint="@string/get_first_name"
            android:singleLine="true"
            android:layout_marginEnd="7dp"
            android:imeOptions="actionNext"
            android:textSize="18sp"
            android:textColor="@color/secondary_color" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="18sp"
            android:singleLine="true"
            android:layout_marginStart="7dp"
            android:hint="@string/get_last_name"
            android:imeOptions="actionDone"
            android:backgroundTint="@color/primary_color"
            android:textColorHint="@color/secondary_color"
            android:textColor="@color/secondary_color" />
    </LinearLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/imgNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:src="@drawable/right_arrow"
        android:tint="@color/secondary_color"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_name"
        app:backgroundTint="@color/primary_color"
        app:layout_anchorGravity="bottom|right|end" />


</android.support.constraint.ConstraintLayout>