<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_lay" />

    <ImageView
        android:id="@+id/imgNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/invite_friends_message_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/tvInviteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guideline1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/invite_friend_share_code_text"
        android:textColor="@color/secondary_color"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/tvInviteValueCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvInviteText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="dr0581"
        android:textColor="@color/primary_color"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvInvitedesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvInviteValueCode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/invite_friend_share_desc"
        android:textColor="@color/secondary_color"
        android:layout_marginLeft="10dp"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btnInviteCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/invite_friend_button"
        android:textSize="21sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/primary_color"
        android:background="@color/secondary_color"
        android:stateListAnimator="@null" />


</android.support.constraint.ConstraintLayout>